# primordial-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/: Gouraud_Forward.glsl  Gouraud_Forward_frag.spv  Gouraud_Forward_vert.spv
assets/defaults/: Default_Particle.glsl  Default_Particle_frag.spv  Default_Particle_vert.spv  Default_Shadow.glsl  Default_Shadow_frag.spv  Default_Shadow_vert.spv  Default_Unlit.glsl  Default_Unlit_frag.spv  Default_Unlit_vert.spv  DiffuseLighting_Forward.hlsl  DiffuseLighting_Forward.ps  DiffuseLighting_Forward.vs  DiffuseLighting_Forward_ps.cso  DiffuseLighting_Forward_vs.cso  Phong_Forward.glsl  Phong_Forward_frag.spv  Phong_Forward_vert.spv
assets/demo-scenes/desert-globe/: SnowGlobe.glsl  SnowGlobe_frag.spv  SnowGlobe_vert.spv  desert-globe.ini
assets/demo-scenes/desert-globe/bonfire/: bonfire.mtl
assets/demo-scenes/desert-globe/candelabra_tree_1/: realistic_hd_candelabra_tree_140.mtl
assets/demo-scenes/desert-globe/joshua_tree_1/: scene.mtl
assets/demo-scenes/desert-globe/realistic_hd_saguaro_cactus_1530/: realistic_hd_saguaro_cactus_1530 - Copy.mtl  realistic_hd_saguaro_cactus_1530.mtl
assets/demo-scenes/desert-globe/saguaro_tree_1/: realistic_hd_saguaro_cactus_1430.mtl
include/Assets/: AssetInfo.h  AssetManager.h  Model.h  Texture.h
include/Common/: Common.h
include/Core/: Engine.h  EngineConfig.h
include/ECS/: ComponentArray.h  ComponentType.h  Entity.h  EntityManager.h  IComponentArray.h  ISystem.h
include/Graphics/: GeometryGenerator.h  IRenderer.h  Material.h  Mesh.h  RenderConfig.h  RenderTypes.h  ResourcePool.h  Texture.h  Vertex.h
include/Graphics/Components/: Camera.h  DirectionalLight.h  MeshRenderer.h  ParticleEmitter.h
include/Graphics/D3D11/: D3D11GPUBuffer.h  D3D11Renderer.h  D3D11Shader.h  D3D11Types.h  D3D11Utilities.h
include/Graphics/Systems/: CameraSystem.h  GUISystem.h  ParticleSystem.h  RenderSystem.h
include/Graphics/Vulkan/: VulkanBuffer.h  VulkanCommand.h  VulkanDevice.h  VulkanPipeline.h  VulkanRenderer.h  VulkanShader.h  VulkanSwapchain.h  VulkanTypes.h
include/Input/: InputCode.h  InputSystem.h  InputTypes.h  Keyboard.h  Mouse.h
include/Math/: Math.h
include/Platform/: CallbackManager.h  GLFWCallbacks.h  PlatformSystem.h
include/Scene/: EntityFactory.h  SceneLoader.h
include/Scene/Components/: DayNightCycle.h  Tag.h  Transform.h
include/Scene/Systems/: DayNightSystem.h  SceneControlSystem.h  TransformSystem.h
include/Utilities/: CommandLineArguments.h  EnumReflection.h  IOUtilities.h  Logger.h  MemoryUtilities.h  StringUtilities.h  Timer.h
src/: main.cpp
src/Assets/: AssetManager.cpp  Model.cpp  Texture.cpp
src/Core/: Engine.cpp
src/ECS/: Entity.cpp  EntityManager.cpp
src/Graphics/: GeometryGenerator.cpp  Material.cpp  Vertex.cpp
src/Graphics/D3D11/: D3D11GPUBuffer.cpp  D3D11Renderer.cpp  D3D11Shader.cpp  D3D11Utilities.cpp
src/Graphics/Systems/: CameraSystem.cpp  GUISystem.cpp  ParticleSystem.cpp  RenderSystem.cpp
src/Graphics/Vulkan/: VulkanBuffer.cpp  VulkanCommand.cpp  VulkanDevice.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanShader.cpp  VulkanSwapchain.cpp
src/Input/: InputSystem.cpp  Keyboard.cpp  Mouse.cpp
src/Math/: Math.cpp
src/Platform/: CallbackManager.cpp  GLFWCallbacks.cpp  PlatformSystem.cpp
src/Scene/: EntityFactory.cpp  SceneLoader.cpp
src/Scene/Systems/: DayNightSystem.cpp  SceneControlSystem.cpp  TransformSystem.cpp
src/Utilities/: Logger.cpp  Timer.cpp
